college/static/college/schedule.css
.schedule {
    height: 100%;
    border: none;
}

.schedule td {
    height: 100% !important;
    min-width: 50px;
    padding: 0;
}

.schedule tr:first-child {
    background-color: #8b9e9d !important;
    color: white;
}

.schedule th {
    border: 2px solid #777;
    border-right: 0;
}

.schedule th:first-child {
    border-left: 0;
}

.schedule td:first-child {
    width: 50px;
    font-weight: bold;
    background-color: #777;
    color: white;
    line-height: 15px;
    text-align: right;
    border-bottom: 2px solid #8b9e9d;

}

.schedule tr:nth-of-type(odd) {
    background-color: #e1e1e1;
}

.turn {
    /*display: flex;*/
    justify-content: center;
    flex-direction: column;
    border: 1px solid #b0b0b0;
    background-color: #53cc4c;
    /*height: 100% !important;*/
    text-align: center;
}

.turn > a {
    padding: 2px;
    color: black;
}

.end-time {
    font-size: 0.7em;
}

.empty_time_slot {
    background-color: #2fa40c;
}

.busy_time_slot {
    background-color: #c90014;
}

.schedule_wrapper {
    width: 100%;
    overflow-x: scroll;
}

.building_schedule_map {
    border-spacing: 0;
}

.building_schedule_map td, .building_schedule_map th {
    margin: 0;
    border-bottom: 2px solid black;
    white-space: nowrap;
    border-top-width: 0;
    min-width: 25px;
}

.building_schedule_map th {
    border-left: 2px solid white;
}

.building_schedule_map td:nth-of-type(odd) {
    border-left: 2px solid #ffffff;
    border-right: 2px dotted #666666;
}

.building_schedule_map tr:first-child {
    background-color: #ccc !important;
}

.building_schedule_map th:first-child {
    background-color: #777 !important;
    color: white;
    font-size: 1.2em;
}

